src/test/resources/testData/annotation.semantic/RemoveOverride.hx
package ;

class <info descr="null">RemoveOverride</info> {
  <error descr="Overriding nothing">over<caret>ride</error> public function <info descr="null">testMethod</info>() {
  }
}